<resources>
    <string name="app_name">NewsApp</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="label_not_have_account">Do not have an account ?</string>
    <string name="label_signUp">Sign Up</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="hint_first_name">Enter your First Name</string>
    <string name="hint_last_name">Enter your Last Name</string>
    <string name="label_have_account">Already have an account?</string>
    <string name="label_nav_home">Home</string>
    <string name="label_nav_favourite">Favourite</string>
    <string name="label_nav_profile">Profile</string>
    <string name="hint_search">Search</string>
    <string name="label_latest_news">Latest News</string>
    <string name="label_see_all">See All</string>
    <string name="label_health">Health</string>
    <string name="label_technology">Technology</string>
    <string name="label_finance">Finance</string>
    <string name="label_art">Art</string>
    <string name="label_country">Country</string>
    <string name="label_read_more">Read More</string>
    <string name="label_hot_updates">Hot Updates</string>
</resources>