<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_auth_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@+id/toolbar_auth_sign_up"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_label_first_name"
                style="@style/colorBlackSemiBoldStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="50dp"
                android:text="@string/label_first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="@color/colorTransparent"
                app:boxStrokeErrorColor="@color/colorErrorRed"
                app:boxStrokeWidth="1dp"
                app:endIconCheckable="true"
                app:endIconMode="clear_text"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/textErrorTextRRegularStyle"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_first_name"
                app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_first_name"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:ems="10"
                    android:hint="@string/hint_first_name"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_label_last_name"
                style="@style/colorBlackSemiBoldStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_last_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_first_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="@color/colorTransparent"
                app:boxStrokeErrorColor="@color/colorErrorRed"
                app:boxStrokeWidth="1dp"
                app:endIconCheckable="true"
                app:endIconMode="clear_text"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/textErrorTextRRegularStyle"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_last_name"
                app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_last_name"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:ems="10"
                    android:hint="@string/hint_last_name"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_label_email"
                style="@style/colorBlackSemiBoldStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_last_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="@color/colorTransparent"
                app:boxStrokeErrorColor="@color/colorErrorRed"
                app:boxStrokeWidth="1dp"
                app:endIconCheckable="true"
                app:endIconMode="clear_text"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/textErrorTextRRegularStyle"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_email"
                app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:ems="10"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_label_password"
                style="@style/colorBlackSemiBoldStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="@color/colorTransparent"
                app:boxStrokeErrorColor="@color/colorErrorRed"
                app:boxStrokeWidth="1dp"
                app:endIconCheckable="true"
                app:endIconMode="password_toggle"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/textErrorTextRRegularStyle"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_password"
                app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_label_confirm_password"
                style="@style/colorBlackSemiBoldStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_confirm_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="@color/colorTransparent"
                app:boxStrokeErrorColor="@color/colorErrorRed"
                app:boxStrokeWidth="1dp"
                app:endIconCheckable="true"
                app:endIconMode="password_toggle"
                app:errorEnabled="false"
                app:errorTextAppearance="@style/textErrorTextRRegularStyle"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_confirm_password"
                app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_confirm"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_sign_up"
                style="@style/primaryButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="55dp"
                android:stateListAnimator="@null"
                android:text="@string/label_signUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_confirm_password" />

            <TextView
                android:id="@+id/text_have_account"
                style="@style/colorBlackSemiBoldStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="70dp"
                android:text="@string/label_have_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_login"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/text_login"
                style="@style/colorPrimaryBlueSemiBoldStyle.Size14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_login"
                app:layout_constraintBottom_toBottomOf="@+id/text_have_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_have_account" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>